# rate-limit-shield

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ORIGIN.md
examples/: basic_usage.py
src/rate_limit_shield/: __init__.py  breaker.py  bucket.py  llm.py  retry.py  shield.py
tests/: test_breaker.py  test_bucket.py  test_llm.py  test_shield.py
