[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rate-limit-shield"
version = "0.1.0"
description = "Production-grade rate limiting, circuit breaking, and retry shaping for LLM APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mirza Causevic" }]
keywords = ["rate-limiting", "circuit-breaker", "llm", "openai", "anthropic", "sre", "reliability", "retry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/mizcausevic-dev/rate-limit-shield"
Repository = "https://github.com/mizcausevic-dev/rate-limit-shield"
Issues = "https://github.com/mizcausevic-dev/rate-limit-shield/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/rate_limit_shield"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
